--- a/Translation/item.json
+++ b/Translation/item.json
@@ -7091,6 +7091,24 @@
         "th":"",
         "id":"Ramuan Instan Hebat"
     },
+    "item.7200.name":{
+        "en":"Double EXP Orb",
+        "fr":"Orbe Double EXP",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.10001.name":{
         "en":"Yellow Celebeam Powder",
         "fr":"Poudre de Celebeam Jaune",
