--- a/Translation/item.json
+++ b/Translation/item.json
@@ -4859,6 +4859,438 @@
         "th":"",
         "id":""
     },
+    "item.4901.name":{
+        "en":"Spirit Stat Book [HP]",
+        "fr":"",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.4902.name": {
+        "en": "Spirit Stat Book [MP]",
+        "fr": "",
+        "es": "",
+        "ch": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "item.4903.name": {
+        "en": "Spirit Stat Book [Attack]",
+        "fr": "",
+        "es": "",
+        "ch": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "item.4904.name": {
+        "en": "Spirit Stat Book [Defence]",
+        "fr": "",
+        "es": "",
+        "ch": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "item.4905.name": {
+        "en": "Spirit Stat Book [Accuracy]",
+        "fr": "",
+        "es": "",
+        "ch": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "item.4906.name": {
+        "en": "Spirit Stat Book [Evasion]",
+        "fr": "",
+        "es": "",
+        "ch": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "item.4907.name": {
+        "en": "Spirit Stat Book [Holy Attack]",
+        "fr": "",
+        "es": "",
+        "ch": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "item.4908.name": {
+        "en": "Spirit Stat Book [Attack Speed]",
+        "fr": "",
+        "es": "",
+        "ch": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "item.4909.name": {
+        "en": "Spirit Stat Book [Crit Accuracy]",
+        "fr": "",
+        "es": "",
+        "ch": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "item.4910.name": {
+        "en": "Spirit Stat Book [Crit Evasion]",
+        "fr": "",
+        "es": "",
+        "ch": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "item.4911.name": {
+        "en": "Spirit Stat Book [Crit Enhanced]",
+        "fr": "",
+        "es": "",
+        "ch": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "item.4912.name": {
+        "en": "Spirit Stat Book [Crit Reduction]",
+        "fr": "",
+        "es": "",
+        "ch": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "item.4913.name": {
+        "en": "Spirit Stat Book [Skill Accuracy]",
+        "fr": "",
+        "es": "",
+        "ch": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "item.4914.name": {
+        "en": "Spirit Stat Book [Skill Evasion]",
+        "fr": "",
+        "es": "",
+        "ch": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "item.4915.name": {
+        "en": "Spirit Stat Book [Skill Enhanced]",
+        "fr": "",
+        "es": "",
+        "ch": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "item.4916.name": {
+        "en": "Spirit Stat Book [Luck]",
+        "fr": "",
+        "es": "",
+        "ch": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "item.4917.name": {
+        "en": "Spirit Stat Book [Skill Crit Accuracy]",
+        "fr": "",
+        "es": "",
+        "ch": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "item.4918.name": {
+        "en": "Spirit Stat Book [Skill Crit Evasion]",
+        "fr": "",
+        "es": "",
+        "ch": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "item.4919.name": {
+        "en": "Spirit Stat Book [Skill Crit Enhanced]",
+        "fr": "",
+        "es": "",
+        "ch": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "item.4920.name": {
+        "en": "Spirit Stat Book [Skill Crit Reduction]",
+        "fr": "",
+        "es": "",
+        "ch": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "item.4951.name": {
+        "en": "Spirit Food I",
+        "fr": "",
+        "es": "",
+        "ch": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "item.4952.name": {
+        "en": "Spirit Food II",
+        "fr": "",
+        "es": "",
+        "ch": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "item.4953.name": {
+        "en": "Spirit Food III",
+        "fr": "",
+        "es": "",
+        "ch": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "item.4954.name": {
+        "en": "Spirit Food IV",
+        "fr": "",
+        "es": "",
+        "ch": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
     "item.5000.name":{
         "en":"Chain Mail M",
         "fr":"Cotte de Mailles H",
