--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -448,5 +448,77 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+    "tooltip.stat.baseValue":{
+        "en":"Base attribute value: {0}",
+        "fr":"Valeur de base de l'attribut: {0}",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "tooltip.stat.upStuffPct":{
+        "en":"Additional gain from equipment: {0}%",
+        "fr":"Gain supplémentaire de l'équipement: {0}%",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "tooltip.stat.upPassivePct":{
+        "en":"Additional gain from talents: {0}%",
+        "fr":"Gain supplémentaire des talents: {0}%",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "tooltip.stat.upBuffPct":{
+        "en":"Additional gain from buffs: {0}%",
+        "fr":"Gain supplémentaire des buffs: {0}%",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
