--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -7768,7 +7768,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "Tăng {0}% Tránh Né Kỹ Năng.",
+        "vi": "Tăng {0}% Né Tránh Kỹ Năng.",
         "ar": "",
         "it": "",
         "pl": "",
@@ -11224,7 +11224,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "Tránh Né Kỹ Năng Bạo Kích +10%.",
+        "vi": "Né Tránh Kỹ Năng Bạo Kích +10%.",
         "ar": "",
         "it": "",
         "pl": "",
