--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -460,7 +460,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Giá trị thuộc tính gốc: {0}",
         "ar":"",
         "it":"",
         "pl":"",
@@ -478,7 +478,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cộng thêm nhận được từ trang bị: {0}%",
         "ar":"",
         "it":"",
         "pl":"",
@@ -496,7 +496,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cộng thêm nhận được từ thiên phú: {0}%",
         "ar":"",
         "it":"",
         "pl":"",
@@ -514,7 +514,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cộng thêm nhận được từ lợi ích ngoài: {0}%",
         "ar":"",
         "it":"",
         "pl":"",
