--- a/Translation/item.json
+++ b/Translation/item.json
@@ -2573,6 +2573,60 @@
         "th":"",
         "id":"Sarung tangan Dabura"
     },
+    "item.1200.name":{
+        "en":"Floating Rock",
+        "fr":"Rocher Volant",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.1201.name":{
+        "en":"Floating Rock",
+        "fr":"Rocher Volant",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.1202.name":{
+        "en":"Floating Rock",
+        "fr":"Rocher Volant",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.2000.name":{
         "en":"Foxhound - Belt",
         "fr":"Foxhound - Ceinture",
@@ -9425,6 +9479,60 @@
         "jp":"",
         "pt":"",
         "vi":"Giọt Thân Thương",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.21008.name":{
+        "en":"Red Soul",
+        "fr":"Âme Rouge",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.21009.name":{
+        "en":"Yellow Soul",
+        "fr":"Âme Jaune",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.21010.name":{
+        "en":"Blue Soul",
+        "fr":"Âme Bleu",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
         "ar":"",
         "it":"",
         "pl":"",
