--- a/Translation/item.json
+++ b/Translation/item.json
@@ -2584,7 +2584,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Phiến Đá Nổi",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2602,7 +2602,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Phiến Đá Nổi",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2620,7 +2620,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Phiến Đá Nổi",
         "ar":"",
         "it":"",
         "pl":"",
