--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -3994,5 +3994,23 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+    "UI.windows.rankings.title":{
+        "en":"Rankings",
+        "fr":"Classement",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
