--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -4006,7 +4006,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Xếp Hạng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4024,7 +4024,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp Độ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4042,7 +4042,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Độ Giàu",
         "ar":"",
         "it":"",
         "pl":"",
