--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -4060,7 +4060,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Quy Tắc Xếp Hạng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4078,7 +4078,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bảng xếp hạng sẽ được làm mới mỗi ngày. Bạn có thể nhấn \"Khen Ngợi\" hoặc \"Che Bai\" để bầu cho một người chơi.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4096,7 +4096,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tên",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4114,7 +4114,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp Độ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4132,7 +4132,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Độ Giàu",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4150,7 +4150,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Điểm Trang Bị",
         "ar":"",
         "it":"",
         "pl":"",
