--- a/Translation/item.json
+++ b/Translation/item.json
@@ -2764,7 +2764,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[Linh Trứng] Chim Dã Hành Con",
+        "vi":"[Linh Trứng] Tiểu Lục Hành Kê",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2962,7 +2962,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[Linh Trứng] Chim Dã Hành",
+        "vi":"[Linh Trứng] Lục Hành Kê",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3880,7 +3880,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Chim Dã Hành Con",
+        "vi":"Tiểu Lục Hành Kê",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4078,7 +4078,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Chim Dã Hành",
+        "vi":"Lục Hành Kê",
         "ar":"",
         "it":"",
         "pl":"",
