--- a/Translation/map.json
+++ b/Translation/map.json
@@ -154,7 +154,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Sân Bay Khải Ân",
         "ar":"",
         "it":"",
         "pl":"",
@@ -388,7 +388,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Mộ Quân Hoàng",
         "ar":"",
         "it":"",
         "pl":"",
