--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -2710,7 +2710,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "Chớp Mắt",
+        "vi": "Chớp Nháy",
         "ar": "",
         "it": "",
         "pl": "",
@@ -3952,7 +3952,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "Biến Hóa",
+        "vi": "Thuật Biến Hình",
         "ar": "",
         "it": "",
         "pl": "",
@@ -4762,7 +4762,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "Hồi Máu",
+        "vi": "Thuật Trị Liệu",
         "ar": "",
         "it": "",
         "pl": "",
@@ -5392,7 +5392,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "Bậc Thầy Hồi Máu",
+        "vi": "Bậc Thầy Trị Liệu",
         "ar": "",
         "it": "",
         "pl": "",
