--- a/Translation/item.json
+++ b/Translation/item.json
@@ -8965,7 +8965,7 @@
     },
     "item.13015.name":{
         "en":"Skill Book [Charged Shot]",
-        "fr":"Livre de Sort [Tir Explosif]",
+        "fr":"Livre de Sort [Tir Chargé]",
         "es":"",
         "ch":"",
         "kr":"",
