--- a/Translation/general.json
+++ b/Translation/general.json
@@ -1018,7 +1018,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tất Cả",
         "ar":"",
         "it":"",
         "pl":"",
