--- a/Translation/item.json
+++ b/Translation/item.json
@@ -7318,7 +7318,7 @@
         "de":"geringer Heiltrank",
         "jp":"",
         "pt":"",
-        "vi":"Thuốc Hồi Máu Ít",
+        "vi":"Thuốc Hồi Máu Bé",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7336,7 +7336,7 @@
         "de":"kleiner Heiltrank",
         "jp":"",
         "pt":"",
-        "vi":"Thuốc Hồi Máu Bé",
+        "vi":"Thuốc Hồi Máu Ít",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7480,7 +7480,7 @@
         "de":"Instant Heilflasche",
         "jp":"",
         "pt":"",
-        "vi":"Bình Hồi Máu Tức Thì Nhỏ",
+        "vi":"Bình Hồi Máu Tức Thì",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7498,7 +7498,7 @@
         "de":"Höhere instant Heilflasche",
         "jp":"",
         "pt":"",
-        "vi":"Bình Hồi Máu Tức Thì Trung",
+        "vi":"Bình Hồi Máu Tức Thì Nhiều",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7552,7 +7552,7 @@
         "de":"Fortgeschrittene instant Heilflasche",
         "jp":"",
         "pt":"",
-        "vi":"Bình Hồi Máu Tức Thì Siêu Cấp",
+        "vi":"Bình Hồi Máu Tức Thì Cao Cấp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7588,7 +7588,7 @@
         "de":"Höherer Magietrank",
         "jp":"",
         "pt":"",
-        "vi":"Thuốc Năng Lượng Trung",
+        "vi":"Thuốc Năng Lượng Nhiều",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7642,7 +7642,7 @@
         "de":"Höhere Instant Magieflasche",
         "jp":"",
         "pt":"",
-        "vi":"Bình Ma Thuật Tức Thì Lớn",
+        "vi":"Bình Năng Lượng Tức Thì Nhiều",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8074,7 +8074,7 @@
         "de":"Blendender Roter Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Celebeam Đỏ Sáng Rực",
+        "vi":"Đá Celebeam Đỏ Sáng Ngời",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8092,7 +8092,7 @@
         "de":"Blendender Blauer Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Celebeam Lam Sáng Rực",
+        "vi":"Đá Celebeam Lam Sáng Ngời",
         "ar":"",
         "it":"",
         "pl":"",
