To the End of 2021 (1)

--- a/Translation/map.json
+++ b/Translation/map.json
@@ -262,7 +262,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Hang Celebeam tầng",
+        "vi":"Hang Celebeam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -280,7 +280,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Hang Celebeam tầng 1",
+        "vi":"Hang Celebeam Tầng 1",
         "ar":"",
         "it":"",
         "pl":"",
