--- a/Translation/item.json
+++ b/Translation/item.json
@@ -5849,6 +5849,114 @@
         "th":"",
         "id":""
     },
+    "item.5028.name":{
+        "en":"Bruce Lee (Gold)",
+        "fr":"Bruce Lee (Doré)",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.5029.name":{
+        "en":"Bruce Lee (Grey)",
+        "fr":"Bruce Lee (Gris)",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.5030.name":{
+        "en":"Bruce Lee (Green)",
+        "fr":"Bruce Lee (Vert)",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.5031.name":{
+        "en":"Bikini (Red)",
+        "fr":"Bikini (Rouge)",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.5032.name":{
+        "en":"Bikini (Cyan)",
+        "fr":"Bikini (Cyan)",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.5033.name":{
+        "en":"Bikini (Purple)",
+        "fr":"Bikini (Violet)",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.6000.name": {
 		"en": "Initlal Hairstyle (Green)",
 		"fr": "Coiffure Initiale (Vert)",
