To the End of 2021 (2)

--- a/Translation/item.json
+++ b/Translation/item.json
@@ -5860,7 +5860,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Lý Tiểu Long (Vàng)",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5878,7 +5878,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Lý Tiểu Long (Xám)",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5896,7 +5896,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Lý Tiểu Long (Lục)",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5914,7 +5914,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Áo tắm Bikini (Đỏ)",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5932,7 +5932,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Áo tắm Bikini (Xanh Lơ)",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5950,7 +5950,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Áo tắm Bikini (Tím)",
         "ar":"",
         "it":"",
         "pl":"",
