--- a/Translation/item.json
+++ b/Translation/item.json
@@ -406,7 +406,7 @@
         "de":"Klingenprüfung",
         "jp":"",
         "pt":"",
-        "vi":"Lưỡi Thách Thức",
+        "vi":"Kiếm Thách Thức",
         "ar":"",
         "it":"",
         "pl":"",
@@ -640,7 +640,7 @@
         "de":"Eiserner Langbogen",
         "jp":"",
         "pt":"",
-        "vi":"Cung Tay Sắt",
+        "vi":"Cung Cán Sắt",
         "ar":"",
         "it":"",
         "pl":"",
@@ -658,7 +658,7 @@
         "de":"Plünderer Langbogen",
         "jp":"",
         "pt":"",
-        "vi":"Cung Đột Kích",
+        "vi":"Cung Đạo Tặc",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1324,7 +1324,7 @@
         "de":"Abadon Helm",
         "jp":"",
         "pt":"",
-        "vi":"Mũ Quỷ Vương",
+        "vi":"Mũ Âm Ty",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1594,7 +1594,7 @@
         "de":"Holzarmband",
         "jp":"",
         "pt":"",
-        "vi":"Vòng Cổ Bằng Gỗ",
+        "vi":"Vòng Cổ Gỗ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1612,7 +1612,7 @@
         "de":"Silbernes Amulett",
         "jp":"",
         "pt":"",
-        "vi":"Bùa Hộ Mệnh bạc",
+        "vi":"Bùa Hộ Mệnh Bạc",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1648,7 +1648,7 @@
         "de":"Feuerkern Halzkette",
         "jp":"",
         "pt":"",
-        "vi":"Vòng Cổ Lõi Lửa",
+        "vi":"Vòng Cổ Hỏa Lõi",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1666,7 +1666,7 @@
         "de":"Traumhimmel Halskette",
         "jp":"",
         "pt":"",
-        "vi":"Dây Chuyền Mơ Mây",
+        "vi":"Dây Chuyền Mộng Mơ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2296,7 +2296,7 @@
         "de":"Heiliges Cape",
         "jp":"",
         "pt":"",
-        "vi":"Áo Choàng Hào Qunag",
+        "vi":"Áo Choàng Hào Quang",
         "ar":"",
         "it":"",
         "pl":"",
