--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -3286,7 +3286,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "Biến phù thủy thành phù thủy bí truyền, tăng Sát Thương bằng với 50% Máu Tối Đa. Đồng thời phục hồi 10 Năng Lượng mỗi giây. Có hiệu lực trong 30 giây.",
+        "vi": "Biến phù thủy thành phù thủy bí thuật, tăng Sát Thương bằng với 50% Máu Tối Đa. Đồng thời phục hồi 10 Năng Lượng mỗi giây. Có hiệu lực trong 30 giây.",
         "ar": "",
         "it": "",
         "pl": "",
@@ -3556,7 +3556,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "Tăng Cường Bí Truyền",
+        "vi": "Tăng Cường Bí Thuật",
         "ar": "",
         "it": "",
         "pl": "",
@@ -4312,7 +4312,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "Triển khai một hạt giống bí truyền ở nơi được chỉ định. Sau 5 giây. Gây Sát Thương lên tất cả các mục tiêu trong phạm vi 72 mét, gây ra 200% Sát Thương và 500 Sát Thương Kỹ Năng cộng thêm. Đồng thời Câm Lặng các mục tiêu trong 2 giây tiếp theo và gây 60 Công Kích Thần Thánh.",
+        "vi": "Triển khai một hạt giống bí thuật ở nơi được chỉ định. Sau 5 giây. Gây Sát Thương lên tất cả các mục tiêu trong phạm vi 72 mét, gây ra 200% Sát Thương và 500 Sát Thương Kỹ Năng cộng thêm. Đồng thời Câm Lặng các mục tiêu trong 2 giây tiếp theo và gây 60 Công Kích Thần Thánh.",
         "ar": "",
         "it": "",
         "pl": "",
