--- a/Translation/item.json
+++ b/Translation/item.json
@@ -9629,6 +9629,24 @@
         "th":"",
         "id":""
     },
+    "item.20010.name":{
+        "en":"Rockcord",
+        "fr":"Rochecorde",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.21008.name":{
         "en":"Red Soul",
         "fr":"Âme Rouge",
