To the End of 2021 (3)

--- a/Translation/item.json
+++ b/Translation/item.json
@@ -9640,7 +9640,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đá Hồn",
         "ar":"",
         "it":"",
         "pl":"",
