--- a/Translation/item.json
+++ b/Translation/item.json
@@ -5957,6 +5957,42 @@
         "th":"",
         "id":""
     },
+    "item.5034.name":{
+        "en":"Luffy",
+        "fr":"Luffy",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Luffy",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.5035.name":{
+        "en":"Hatsune",
+        "fr":"Hatsune",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Hatsune",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.6000.name": {
 		"en": "Initlal Hairstyle (Green)",
 		"fr": "Coiffure Initiale (Vert)",
