--- a/Translation/item.json
+++ b/Translation/item.json
@@ -5993,6 +5993,42 @@
         "th":"",
         "id":""
     },
+    "item.5036.name":{
+        "en":"Wedding Suit",
+        "fr":"Costume de Mariage",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.5037.name":{
+        "en":"Wedding Dress",
+        "fr":"Robe de Mariée",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.6000.name": {
 		"en": "Initlal Hairstyle (Green)",
 		"fr": "Coiffure Initiale (Vert)",
