--- a/Translation/item.json
+++ b/Translation/item.json
@@ -6004,7 +6004,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bộ Đồ Lễ Cưới",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6022,7 +6022,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bộ Váy Lễ Cưới",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9730,7 +9730,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hồn Đỏ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9748,7 +9748,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hồn Vàng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9766,7 +9766,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hồn Xanh",
         "ar":"",
         "it":"",
         "pl":"",
